[gd_scene load_steps=7 format=3 uid="uid://r4rtkqn6nxjq"]

[ext_resource type="PackedScene" uid="uid://ctj8a1spf6tn8" path="res://Scenes/Turrets/turret_container.tscn" id="1_8414r"]
[ext_resource type="Script" path="res://Scenes/Turrets/Carrot Cannon/carrot_cannon_container.gd" id="2_x24q5"]
[ext_resource type="PackedScene" uid="uid://cut8ux148v1xa" path="res://Scenes/Turrets/Carrot Cannon/carrot_projectile.tscn" id="3_pw72c"]
[ext_resource type="PackedScene" uid="uid://m1mxmj1rfahc" path="res://Models/Turrets/Carrot Cannon/carrot_cannon.tscn" id="3_upbmi"]
[ext_resource type="AudioStream" uid="uid://b4x2fido7imqc" path="res://audio/Gunshot 2.mp3" id="5_r2t2l"]
[ext_resource type="Script" path="res://Scenes/Turrets/Carrot Cannon/gunshot.gd" id="6_y5kh0"]

[node name="CarrotCannonContainer" instance=ExtResource("1_8414r")]
script = ExtResource("2_x24q5")
fire_rate_ms = 1000
projectiles_to_shoot_at_a_time = 1
projectile_speed = 3.0
projectile_type = ExtResource("3_pw72c")

[node name="CarrotCannon" parent="." index="0" instance=ExtResource("3_upbmi")]

[node name="gunshot" type="AudioStreamPlayer2D" parent="." index="1"]
stream = ExtResource("5_r2t2l")
volume_db = -31.856
script = ExtResource("6_y5kh0")

[connection signal="area_entered" from="CarrotCannon" to="." method="_on_carrot_cannon_area_entered"]
[connection signal="area_exited" from="CarrotCannon" to="." method="_on_carrot_cannon_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_processing" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_processing"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
